--- a/index.html
+++ b/index.html
@@ -124,6 +124,28 @@
     }
 
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+  @media (max-width: 600px) {
+  h1 {
+    font-size: 38px !important; /* Уменьшаем "Happy Valentine's Day" */
+    margin-top: 80px !important;
+  }
+
+  #reason-text {
+    font-size: 24px !important; /* Уменьшаем причины (будет удобно читать) */
+    margin-top: 30vh !important; /* Центрируем текст по вертикали */
+    max-width: 90%;
+  }
+
+  .final-love {
+    font-size: 45px !important; /* Уменьшаем финальное "I love you" */
+    top: 35% !important;
+  }
+
+  .valentine-cat {
+    width: 80vw !important; /* Котик станет чуть меньше, чтобы не занимать весь экран */
+  }
+}
   </style>
 </head>
 <body>
